--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-static-top" role="navigation" bs-navbar>
+<div class="navbar navbar-default navbar-static-top"
+     role="navigation" bs-navbar>
     <div class="navbar-header">
         <a class="navbar-brand" href="/">
             <span class="glyphicon glyphicon-film"></span>
-            Show<strong>Tracker</strong>
-        </a>
+            Show<strong>Trackr</strong></a>
     </div>
     <ul class="nav navbar-nav">
         <li data-match-route="/$"><a href="/">Home</a></li>
@@ -27,9 +27,9 @@
     </ul>
     <ul class="nav navbar-nav pull-right" ng-if="currentUser">
         <li class="navbar-text" ng-bind="currentUser.email"></li>
-        <li><a href="javascript:void(0)" ng-click="logOut()">LogOut</a></li>
+        <li><a href="javascript:void(0)" ng-click="logout()">Logout</a></li>
     </ul>
-</nav>
+</div>
 
 <div ng-view></div>
 
@@ -42,6 +42,6 @@
 <script src="vendor/angular-cookies.js"></script>
 <script src="vendor/moment.min.js"></script>
 
-<script src="javascripts/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
