AngularJS Routes and Template

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="/">
             <span class="glyphicon glyphicon-film"></span>
-            Show<strong>Trackr</strong></a>
+            Show<strong>Tracker</strong></a>
     </div>
     <ul class="nav navbar-nav">
         <li data-match-route="/$"><a href="/">Home</a></li>
@@ -43,5 +43,8 @@
 <script src="vendor/moment.min.js"></script>
 
 <script src="app.js"></script>
+<script src="controllers/main.js"></script>
+<script src="services/show.js"></script>
+
 </body>
 </html>
