Add form validation and error message to a new template add.thml

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,10 @@
 <script src="vendor/moment.min.js"></script>
 
 <script src="app.js"></script>
+<!-- controllers -->
 <script src="controllers/main.js"></script>
+<script src="controllers/add.js"></script>
+
 <script src="services/show.js"></script>
 
 </body>
