--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,10 @@
 <script src="controllers/signup.js"></script>
 <script src="controllers/navbar.js"></script>
 
+<!-- services -->
 <script src="services/show.js"></script>
 <script src="services/subscription.js"></script>
+<script src="services/auth.js"></script>
 <script src="filters/fromNow.js"></script>
 
 </body>
