--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,7 @@
 <script src="services/auth.js"></script>
 <script src="filters/fromNow.js"></script>
 
+<script src="directives/repeatPassword.js"></script>
+
 </body>
 </html>
