--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
 <script src="services/auth.js"></script>
 <script src="filters/fromNow.js"></script>
 
+<!-- directives -->
 <script src="directives/repeatPassword.js"></script>
 
 </body>
